fix: column-gap changed to justify content

--- a/src/components/FilterItem/FilterItem.module.css
+++ b/src/components/FilterItem/FilterItem.module.css
@@ -1,6 +1,6 @@
 .filterItem{
     display: flex;
-    column-gap: 15%;
+    justify-content: space-between;
     margin-top: 20px;
 }
 .filterItem__name{
